src/objects/Contact/fields/Additional_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fax_Number__c</fullName>
    <label>Business Additional Fax Number</label>
    <type>TextArea</type>
</CustomField>