src/objects/Contact/fields/Additional_Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Numbers__c</fullName>
    <inlineHelpText>These numbers were brought in from OnContact.</inlineHelpText>
    <label>Additional Phone Numbers</label>
    <type>TextArea</type>
</CustomField>