src/objects/Contact/fields/Display_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Display_Mailing_Country__c</fullName>
    <label>Display Mailing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO_Countries</valueSetName>
    </valueSet>
</CustomField>