src/objects/Contact/fields/Display_Other_Country__c.field-meta.xml
<CustomField>
    <fullName>Display_Other_Country__c</fullName>
    <label>Display Other Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO_Countries</valueSetName>
    </valueSet>
</CustomField>