src/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Phone Extension</description>
    <inlineHelpText>Phone Extension</inlineHelpText>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>