src/objects/Contact/fields/Inactive_c__c.field-meta.xml
<CustomField>
    <fullName>Inactive_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>