src/objects/Contact/fields/Last_Stay_in_Touch_Save_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stay_in_Touch_Save_Date__c</fullName>
    <label>Last Stay-in-Touch Save Date</label>
    <type>Date</type>
</CustomField>