src/objects/Contact/fields/Party_Account__c.field-meta.xml
<CustomField>
    <fullName>Party_Account__c</fullName>
    <formula>IF(ISPICKVAL(Account.Type, &apos;Party&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Account</label>
    <type>Checkbox</type>
</CustomField>