src/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to indicate the primary contact for an Account</description>
    <inlineHelpText>Use to select the primary contact for the purposes of email/mailings.</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>