src/objects/Contact/fields/Request_to_delete__c.field-meta.xml
<CustomField>
    <fullName>Request_to_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request to delete</label>
    <type>Checkbox</type>
</CustomField>