src/objects/Contact/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>Secondary email address</description>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>