src/objects/Contact/validationRules/Display_Other_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Display_Other_Country</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Display_Other_Country__c)=&quot;&quot;,
NOT($Permission.By_Pass_Validation),

OR(
!ISBLANK(OtherCity),
!ISBLANK(OtherState),
!ISBLANK(OtherStreet),
!ISBLANK(OtherCountry),
!ISBLANK(OtherPostalCode)
)
)</errorConditionFormula>
    <errorDisplayField>Display_Other_Country__c</errorDisplayField>
    <errorMessage>Please indicate a Display Other Country</errorMessage>
</ValidationRule>