src/objects/Contact/validationRules/Full_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Full_Name_Required</fullName>
    <active>true</active>
    <description>First Name and Last Name required</description>
    <errorConditionFormula>AND(OR(ISBLANK(LastName),ISBLANK(FirstName)),$Permission.By_Pass_Validation =False,$Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Both first name and last name should be populated</errorMessage>
</ValidationRule>