src/objects/Contact/validationRules/HY_New_Req_Media.validationRule-meta.xml
<ValidationRule>
    <fullName>HY_New_Req_Media</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISNEW(), 
ISPICKVAL( LeadSource , &apos;Trade Show&apos;), 
ISPICKVAL( Account.Business_Segment__c ,&apos;HIGHYAG&apos;),
ISBLANK (TEXT( Media__c ))
)</errorConditionFormula>
    <errorDisplayField>Media__c</errorDisplayField>
    <errorMessage>You must select a Trade Show</errorMessage>
</ValidationRule>