src/objects/Contact/validationRules/HY_New_Req_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>HY_New_Req_Source</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISNEW(), 
ISBLANK(TEXT( LeadSource )), 
ISPICKVAL( Account.Business_Segment__c ,&apos;HIGHYAG&apos;) 
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>You must select a Lead Source</errorMessage>
</ValidationRule>